Search Value make constant in input box

--- a/view/view.pug
+++ b/view/view.pug
@@ -6,8 +6,11 @@ html
     body
         h1#header WAP ONLINE DICTIONARY
         form.form-signin(method="POST" action="/word")
-         label( for="inputKey" class="sr-only") Term:
-         input(type="text" name="searchKey" id="searchKey" class="form-control" placeholder="Search Definition")
+         label( for="inputKey" ) Term:
+         if(searchValue!= undefined)
+            input(type="text" name="searchKey" id="searchKey" class="form-control" placeholder=searchValue)
+         else
+            input(type="text" name="searchKey" id="searchKey" class="form-control" placeholder="Search Definition")
          input(type="submit" value="Look Up" id="Submit")
          form
          ul#contents 
